security config added 3